--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
+file.reference.jfoenix-8.0.1.jar=lib\\jfoenix-8.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.fontawesomefx-8.9.jar}
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.jfoenix-8.0.1.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
