--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=lib\\jfoenix-8.0.1.jar
+file.reference.tilesfx-1.5.3.jar=lib\\tilesfx-1.5.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.jfoenix-8.0.1.jar}
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.tilesfx-1.5.3.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
