--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/PIDEV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.14.jar=lib\\controlsfx-8.40.14.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.fontawesomefx-8.9.jar}
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
