--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,13 +32,15 @@ excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=lib\\jfoenix-8.0.1.jar
 file.reference.tilesfx-1.5.3.jar=lib\\tilesfx-1.5.3.jar
+file.reference.twilio-7.18.0-jar-with-dependencies__1_.jar=lib\\twilio-7.18.0-jar-with-dependencies (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
-    ${file.reference.tilesfx-1.5.3.jar}
+    ${file.reference.tilesfx-1.5.3.jar}:\
+    ${file.reference.twilio-7.18.0-jar-with-dependencies__1_.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
