--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.controlsfx-8.40.14.jar=lib\\controlsfx-8.40.14.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
 file.reference.JavaFileUploader.jar=lib\\JavaFileUploader.jar
 file.reference.jfoenix-8.0.1.jar=lib\\jfoenix-8.0.1.jar
+file.reference.restfb-2.4.0.jar=lib\\restfb-2.4.0.jar
 file.reference.slf4j-api-1.7.25.jar-1=lib\\slf4j-api-1.7.25.jar
 file.reference.slf4j-simple-1.7.25.jar-1=lib\\slf4j-simple-1.7.25.jar
 file.reference.tilesfx-1.5.3.jar=lib\\tilesfx-1.5.3.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.slf4j-simple-1.7.25.jar-1}:\
     ${file.reference.tilesfx-1.5.3.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
-    ${file.reference.JavaFileUploader.jar}
+    ${file.reference.JavaFileUploader.jar}:\
+    ${file.reference.restfb-2.4.0.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
