--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,10 @@ dist.jar=${dist.dir}/PIDEV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=lib/activation.jar
 file.reference.controlsfx-8.40.14.jar=lib\\controlsfx-8.40.14.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
+file.reference.javax.mail-1.4.4.jar=lib/javax.mail-1.4.4.jar
 file.reference.jfoenix-8.0.1.jar=lib\\jfoenix-8.0.1.jar
 file.reference.slf4j-api-1.7.25.jar-1=lib\\slf4j-api-1.7.25.jar
 file.reference.slf4j-simple-1.7.25.jar-1=lib\\slf4j-simple-1.7.25.jar
@@ -44,7 +46,9 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.25.jar-1}:\
     ${file.reference.slf4j-simple-1.7.25.jar-1}:\
     ${file.reference.tilesfx-1.5.3.jar}:\
-    ${file.reference.jfoenix-8.0.1.jar}
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.javax.mail-1.4.4.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
