--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\iheb ben fraj\\Desktop\\fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=lib\\jfoenix-8.0.1.jar
+file.reference.quartz-2.2.0.jar=lib\\quartz-2.2.0.jar
 file.reference.tilesfx-1.5.3.jar=lib\\tilesfx-1.5.3.jar
 file.reference.twilio-7.18.0-jar-with-dependencies__1_.jar=lib\\twilio-7.18.0-jar-with-dependencies (1).jar
 includes=**
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.tilesfx-1.5.3.jar}:\
-    ${file.reference.twilio-7.18.0-jar-with-dependencies__1_.jar}
+    ${file.reference.twilio-7.18.0-jar-with-dependencies__1_.jar}:\
+    ${file.reference.quartz-2.2.0.jar}
 
 # Space-separated list of extra javac options
 javac.compilerargs=
