--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/PIDEV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=lib/controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.14.jar=lib/controlsfx-8.40.14.jar
 file.reference.controlsfx-samples-8.40.14.jar=lib/controlsfx-samples-8.40.14.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\user\\Downloads\\fontawesomefx-8.9.jar
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.tilesfx-1.5.3.jar-1}:\
     ${file.reference.controlsfx-samples-8.40.14.jar}:\
     ${file.reference.controlsfx-8.40.14.jar}:\
-    ${file.reference.JavaFileUploader.jar}
+    ${file.reference.JavaFileUploader.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
     ${file.reference.GMapsFX-2.12.0.jar}:\
     ${file.reference.google-maps-services-0.2.6.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar}:\
